# llm

./: .gitignore  README.md  test.py
rust_rest_api/: Cargo.toml
rust_rest_api/data/: urls.txt
rust_rest_api/data/articles/: article_2024-01-03_MyShell releases OpenVoice voice cloning AI.txt  article_2024-02-08_DeepMind framework offers breakthrough in LLMs’ reasoning.txt  article_2024-02-15_Amazon trains 980M parameter LLM with 'emergent abilities'.txt  article_2024-02-23_Stability AI previews Stable Diffusion 3 text-to-image model.txt  article_2024-02-26_UK Home Secretary sounds alarm over deepfakes ahead of elections.txt  article_2024-02-27_Mistral AI unveils LLM rivalling major players.txt  article_2024-02-29_UK and France to collaborate on AI following Horizon membership.txt  article_2024-03-01_Elon Musk sues OpenAI over alleged breach of nonprofit agreement.txt  article_2024-03-04_AIs in India will need government permission before launching.txt  article_2024-03-05_Anthropic's latest AI model beats rivals and achieves industry first.txt  article_2024-03-06_OpenAI: Musk wanted us to merge with Tesla or take 'full control'.txt  article_2024-03-07_Google engineer stole AI tech for Chinese firms.txt  article_2024-03-07_Pace of innovation in AI is fierce – but is ethics able to keep up? - AI News.txt  article_2024-03-08_Hugging Face is launching an open robotics project.txt  article_2024-03-08_International Women's Day: What it takes to innovate in the age of Gen AI.txt  (+28 more)
rust_rest_api/src/: crawler.rs  embeddings.rs  main.rs
