[package]
name = "rust_rest_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openai-api-rs = "4.0.8"
rocket = "0.4.2"
rocket_contrib = "0.4.2"
serde = "1.0.104"
serde_json = "1.0.44"
serde_derive = "1.0.104"

[profile.dev]
debug = true
