[package]
name = "rust_rest_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
openai-api-rs = "4.0.8"
pgvector = { version = "0.3", features = ["postgres"] }
postgres = "0.19"
reqwest = {version = "0.11.18", features = ["blocking"]}
rocket = "0.4.2"
rocket_contrib = "0.4.2"
scraper = "0.16"
serde = "1.0.104"
serde_json = "1.0.44"
serde_derive = "1.0.104"
spider = "1.89.17"
ureq = { version = "2", features = ["json"] }

[profile.dev]
debug = true
